# network-flow-monitor-agent

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yaml  codeql.yml
charts/amazon-network-flow-monitor-agent/: Chart.yaml  Makefile  values.yaml
charts/amazon-network-flow-monitor-agent/templates/: _helpers.tpl  daemonSet.yaml  serviceAccount.yaml
nfm-bpf/: Cargo.toml
nfm-bpf/src/: main.rs
nfm-common/: Cargo.toml
nfm-common/src/: constants.rs  ebpf_actuals.rs  ebpf_mocks.rs  mod.rs  network.rs  network_user.rs  sock_ops_handler.rs  utils.rs
nfm-controller/: Cargo.toml  build.rs  rustfmt.toml
nfm-controller/src/: lib.rs  main.rs  sock_diag.rs
nfm-controller/src/events/: event_filter.rs  event_filter_top_loss.rs  event_provider.rs  event_provider_ebpf.rs  host_stats_provider.rs  mod.rs  nat_resolver.rs  network_event.rs  sock_cache.rs
nfm-controller/src/kubernetes/: flow_metadata.rs  kubernetes_metadata_collector.rs  mod.rs  remote_nat_resolver.rs
nfm-controller/src/metadata/: eni.rs  env_metadata_provider.rs  host.rs  k8s_metadata.rs  mod.rs  runtime_environment_metadata.rs  service_metadata.rs
nfm-controller/src/reports/: mod.rs  publisher.rs  publisher_endpoint.rs  report.rs  report_otlp.rs
nfm-controller/src/utils/: clock.rs  command_runner.rs  conntrack_listener.rs  cpu.rs  credentials.rs  event_timer.rs  memory_inspector.rs  mod.rs  report.rs
packaging/: README.md
packaging/linux/: Dockerfile  create_rpm.sh  network-flow-monitor-agent.spec  network-flow-monitor-start  network-flow-monitor.ini  network-flow-monitor.service
test-data/: Dockerfile.test  integration-entrypoint  integration-test-01  report-ec2-otel.json  report-k8s-eks-otel.json  report-k8s-vanilla-otel.json  report1.json  report2.json
