[package]
name = "nfm-controller"
description = "network-flow-monitor-agent collects networking performance statistics from the local machine"
version = "0.1.3"
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
repository = "https://github.com/aws/network-flow-monitor-agent"

[[bin]]
# The controller and BPF packages join forces into a single 'network-flow-monitor-agent' executable.
name = "network-flow-monitor-agent"
path = "src/main.rs"

[lib]
name = "nfm_agent"
path = "src/lib.rs"
crate-type = ["lib"]

[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
panic = "abort"
overflow-checks = true

[dependencies]
aws-config = { version = "1.5", features = [ "rustls" ] }
aws-credential-types = "1.2"
aws-sign-v4 = "0.3"
nfm-common = { version = "0.1.0", path = "../nfm-common", features = ["user"] }

anyhow = "1"
assert_approx_eq = "1"
aya = "0.13"
aya-obj = "0.2"
caps = "0.5.5"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
criterion = "0.5"
env_logger = "0.10"
flate2 = "1.0"
futures = "0.3"
hashbrown = "0.15"
k8s-openapi = { version = "0.23", features = ["latest"] }
kube = { version = "0.97", features = ["runtime", "derive", "rustls-tls"], default-features = false }
libc = "0.2"
log = "0.4"
netlink-packet-core = { version = "0.7" }
netlink-packet-netfilter = { package = "reyzell-netlink-packet-netfilter", version = "0.2" }
netlink-packet-utils = { version = "0.5" }
netlink-sys = { version = "0.8" }
opentelemetry-proto = { version = "0.27", features = [
    "metrics",
    "gen-tonic-messages",
    "gen-tonic",
    "with-serde",
] }
procfs = "0.16"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shadow-rs = "0.36"
signal-hook = "0.3"
structured-logger = "1.0"
sys-info = "0.9"
tokio = { version = "1.25", features = [
    "fs",
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
url = "2.5"

[build-dependencies]
cargo_metadata = "0.19"
shadow-rs = "0.36"
which = { version = "6.0.0", default-features = false }
